United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7087583 Hotspot fails to allocate heap with mmap(MAP_HUGETLB)
7087583 : Hotspot fails to allocate heap with mmap(MAP_HUGETLB)

Details
Type:
Bug
Submit Date:
2011-09-06
Status:
Resolved
Updated Date:
2011-12-12
Project Name:
JDK
Resolved Date:
2011-09-14
Component:
hotspot
OS:
solaris_11,linux
Sub-Component:
gc
CPU:
sparc,generic
Priority:
P2
Resolution:
Fixed
Affected Versions:
solaris_11,hs22
Fixed Versions:
hs22

Related Reports
Backport:
Backport:

Sub Tasks

Description
Hotspot will fail allocating the heap on linux >= 2.6.32 if there're more than 1 large page present but not enough to cover all the heap.

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-14
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/27702f012017
                                     
2011-09-07
SUGGESTED FIX

The solution would be to try small pages if mmap(MAP_HUGETLB) fails.
                                     
2011-09-06



Hardware and Software, Engineered to Work Together