7087583: Hotspot fails to allocate heap with mmap(MAP_HUGETLB)

Try using small pages when transparent huge pages allocation fails

Reviewed-by: ysr